[gd_scene load_steps=3 format=2]

[ext_resource path="res://Vole/Vole.gd" type="Script" id=1]
[ext_resource path="res://Vole/TextInput.gd" type="Script" id=2]

[node name="Vole" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
margin_right = 1010.0
margin_bottom = 586.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
margin_right = 1006.0
margin_bottom = 586.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Top" type="HBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 1006.0
margin_bottom = 291.0
size_flags_vertical = 3

[node name="ButtonBox" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/Top"]
margin_right = 80.0
margin_bottom = 291.0

[node name="ResetCPU" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/Top/ButtonBox"]
margin_right = 80.0
margin_bottom = 20.0
text = "Reset CPU"

[node name="LoadInput" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/Top/ButtonBox"]
margin_top = 24.0
margin_right = 80.0
margin_bottom = 74.0
rect_min_size = Vector2( 80, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Load Input"

[node name="Run" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/Top/ButtonBox"]
margin_top = 78.0
margin_right = 80.0
margin_bottom = 128.0
rect_min_size = Vector2( 80, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Run"

[node name="SingleStep" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/Top/ButtonBox"]
margin_top = 132.0
margin_right = 80.0
margin_bottom = 182.0
rect_min_size = Vector2( 80, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "SingleStep"

[node name="Halt" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/Top/ButtonBox"]
margin_top = 186.0
margin_right = 80.0
margin_bottom = 236.0
rect_min_size = Vector2( 80, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Halt"

[node name="Quit" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/Top/ButtonBox"]
margin_top = 240.0
margin_right = 80.0
margin_bottom = 291.0
rect_min_size = Vector2( 80, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Quit"

[node name="TextInput" type="TextEdit" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/Top"]
margin_left = 84.0
margin_right = 1006.0
margin_bottom = 291.0
rect_min_size = Vector2( 400, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )

[node name="Bottom" type="HBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 295.0
margin_right = 1006.0
margin_bottom = 586.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CPUData" type="GridContainer" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/Bottom"]
margin_right = 115.0
margin_bottom = 291.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.13
columns = 2

[node name="Memory" type="GridContainer" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/Bottom"]
margin_left = 119.0
margin_right = 1006.0
margin_bottom = 291.0
size_flags_horizontal = 3
columns = 17

[node name="AssignmentsContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
margin_left = 1010.0
margin_right = 1010.0
margin_bottom = 586.0

[node name="ClassName" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/AssignmentsContainer"]
margin_bottom = 14.0

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/Top/ButtonBox/ResetCPU" to="." method="_on_ResetCPU_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/Top/ButtonBox/LoadInput" to="." method="_on_LoadInput_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/Top/ButtonBox/Run" to="." method="_on_Run_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/Top/ButtonBox/SingleStep" to="." method="_on_SingleStep_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/Top/ButtonBox/Halt" to="." method="_on_Halt_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/Top/ButtonBox/Quit" to="." method="_on_Quit_pressed"]
